<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="24765" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" colorMatched="YES">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24743"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController" customModule="VideoPoker" customModuleProvider="target">
            <connections>
                <outlet property="cardTable" destination="80" id="83"/>
                <outlet property="mainView" destination="34" id="104"/>
                <outlet property="payScheduleController" destination="92" id="98"/>
                <outlet property="returnViewController" destination="89" id="90"/>
                <outlet property="view" destination="34" id="35"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <viewController autoresizesArchivedViewToFullSize="NO" nibName="PayScheduleView" id="92" userLabel="payScheduleController" customClass="PayScheduleViewController" customModule="VideoPoker" customModuleProvider="target">
            <extendedEdge key="edgesForExtendedLayout"/>
            <connections>
                <outlet property="gameContainer" destination="-1" id="106"/>
            </connections>
        </viewController>
        <viewController autoresizesArchivedViewToFullSize="NO" nibName="CardTableView" id="80" userLabel="cardTable" customClass="CardTableViewController" customModule="VideoPoker" customModuleProvider="target">
            <extendedEdge key="edgesForExtendedLayout"/>
            <connections>
                <outlet property="dataSource" destination="-1" id="88"/>
                <outlet property="delegate" destination="-1" id="82"/>
            </connections>
        </viewController>
        <viewController autoresizesArchivedViewToFullSize="NO" nibName="ReturnView" id="89" userLabel="returnViewController" customClass="ReturnViewController" customModule="VideoPoker" customModuleProvider="target">
            <extendedEdge key="edgesForExtendedLayout"/>
            <connections>
                <outlet property="delegate" destination="-1" id="91"/>
            </connections>
        </viewController>
        <view autoresizesSubviews="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="34" userLabel="trainView" customClass="MainView" customModule="VideoPoker" customModuleProvider="target">
            <rect key="frame" x="0.0" y="0.0" width="320" height="367"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <button opaque="NO" autoresizesSubviews="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" id="44" userLabel="dealButton">
                    <rect key="frame" x="254" y="318" width="60" height="33"/>
                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                    <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="15"/>
                    <state key="normal" title="DEAL" backgroundImage="yellow2-60-40.png">
                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <state key="highlighted">
                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <connections>
                        <action selector="dealOrDraw" destination="-1" eventType="touchUpInside" id="87"/>
                    </connections>
                </button>
                <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Hand Value" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" id="58" userLabel="handValueLabel">
                    <rect key="frame" x="0.0" y="29" width="320" height="43"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                    <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="24"/>
                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" id="63" userLabel="holdBestButton">
                    <rect key="frame" x="167" y="318" width="60" height="33"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                    <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="14"/>
                    <state key="normal" title="HOLD BEST" backgroundImage="yellow2-60-40.png">
                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <state key="highlighted">
                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <connections>
                        <action selector="holdBestCards" destination="-1" eventType="touchUpInside" id="65"/>
                    </connections>
                </button>
                <label opaque="NO" autoresizesSubviews="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleToFill" text="GAME OVER" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" id="60" userLabel="gameOverLabel">
                    <rect key="frame" x="115" y="351" width="90" height="16"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                    <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="13"/>
                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <label opaque="NO" autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="center" lineBreakMode="middleTruncation" minimumFontSize="14" id="93" userLabel="payScheduleLabel (Label)">
                    <rect key="frame" x="0.0" y="0.0" width="320" height="21"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                    <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <accessibility key="accessibilityConfiguration">
                        <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                    </accessibility>
                    <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="14"/>
                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <color key="highlightedColor" red="1" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <color key="shadowColor" red="0.3333333432674408" green="0.3333333432674408" blue="0.3333333432674408" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <size key="shadowOffset" width="-1" height="-1"/>
                </label>
                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="WIN 4000" lineBreakMode="tailTruncation" minimumFontSize="10" adjustsFontSizeToFit="NO" id="108" userLabel="winLabel" customClass="StrokeLabel" customModule="VideoPoker" customModuleProvider="target">
                    <rect key="frame" x="6" y="298" width="100" height="18"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="14"/>
                    <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <color key="highlightedColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <size key="shadowOffset" width="0.0" height="0.0"/>
                </label>
                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="CASH $1143.75" textAlignment="right" lineBreakMode="tailTruncation" minimumFontSize="10" adjustsFontSizeToFit="NO" id="109" userLabel="cashLabel" customClass="StrokeLabel" customModule="VideoPoker" customModuleProvider="target">
                    <rect key="frame" x="188" y="298" width="127" height="18"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                    <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="14"/>
                    <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <color key="highlightedColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <size key="shadowOffset" width="0.0" height="0.0"/>
                </label>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="112" userLabel="betOneButton">
                    <rect key="frame" x="6" y="318" width="52" height="33"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                    <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="15"/>
                    <state key="normal" title="BET 1" backgroundImage="yellow2-60-40.png">
                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <state key="highlighted">
                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <connections>
                        <action selector="betOne" destination="-1" eventType="touchUpInside" id="115"/>
                    </connections>
                </button>
                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="BET 1" lineBreakMode="tailTruncation" minimumFontSize="10" adjustsFontSizeToFit="NO" id="113" userLabel="betLabel">
                    <rect key="frame" x="130" y="298" width="50" height="18"/>
                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                    <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="12"/>
                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                </label>
            </subviews>
            <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.25098040700000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
            <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
            <connections>
                <outlet property="betLabel" destination="113" id="114"/>
                <outlet property="betOneButton" destination="112" id="116"/>
                <outlet property="creditsLabel" destination="109" id="110"/>
                <outlet property="dealButton" destination="44" id="101"/>
                <outlet property="gameOverLabel" destination="60" id="102"/>
                <outlet property="handValueLabel" destination="58" id="100"/>
                <outlet property="holdBestButton" destination="63" id="103"/>
                <outlet property="payScheduleLabel" destination="93" id="105"/>
                <outlet property="winLabel" destination="108" id="111"/>
            </connections>
        </view>
    </objects>
    <resources>
        <image name="yellow2-60-40.png" width="128" height="128"/>
    </resources>
</document>
