...
                            </connections>
                        </viewController>
                    </viewControllers>
                </navigationController>
                <navigationController id="50" userLabel="solveNavController">
                    <extendedEdge key="edgesForExtendedLayout"/>
                    <tabBarItem key="tabBarItem" tag="2" title="Solve" id="54" userLabel="solveItem"/>
                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="52">
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <viewControllers>
                        <viewController title="Solve" nibName="SolveView" id="51" userLabel="solveViewController" customClass="SolveViewController" customModule="VideoPoker" customModuleProvider="target">
                            <extendedEdge key="edgesForExtendedLayout"/>
...
                            </connections>
                        </viewController>
                    </viewControllers>
                </navigationController>
                <navigationController id="57" userLabel="historyNavController">
                    <extendedEdge key="edgesForExtendedLayout"/>
                    <tabBarItem key="tabBarItem" title="History" id="61" userLabel="historyItem"/>
                    <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="59">
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <viewControllers>
                        <viewController nibName="HistoryView" id="58" userLabel="historyViewController" customClass="HistoryViewController" customModule="VideoPoker" customModuleProvider="target">
                            <extendedEdge key="edgesForExtendedLayout"/>
...
