...
        if let navBar = navigationController?.navigationBar {
            navBar.tintColor = MainViewController.navy
            navBar.barStyle = .default
            navBar.isTranslucent = false
        }

        navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Choose Game", style: .done,
                                                            target: self, action: #selector(chooseGame))

        let infoButton = UIButton(type: .infoLight)
        infoButton.addTarget(self, action: #selector(showInfo), for: .touchUpInside)
        navigationItem.leftBarButtonItem = UIBarButtonItem(customView: infoButton)

...
        chooseController.title = "Choose Game"

        let navController = UINavigationController(rootViewController: chooseController)
        navController.navigationBar.tintColor = MainViewController.navy

        chooseController.navigationItem.rightBarButtonItem =
            UIBarButtonItem(title: "Done", style: .done, target: chooseController, action: #selector(ChooseGameViewController.done))
        chooseController.navigationItem.leftBarButtonItem =
            UIBarButtonItem(title: "Cancel", style: .done, target: chooseController, action: #selector(ChooseGameViewController.cancel))

        present(navController, animated: true)
    }

...
